@@ -4,6 +4,7 @@ systemd System and Service Manager
 ~~~~~~~
  * core:
  	- remove dbus CanStart get property;
+ 	- remove dbus CanStop get property;
  
    systemd (214.8)
 ~~~~~~~
